<?xml version="1.0"?>
<package>
  <name>jackal_elevator</name>
  <version>0.0.1</version>
  <description>Launch files, maps and world for autonomous navigation of the Jackal in multifloor elevator</description>
  <author email="swarooph@kabam.ai">Swarooph Seshadri</author>
  <maintainer email="swarooph@kabam.ai">Swarooph Seshadri</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>jackal_navigation</build_depend>
  <build_depend>jackal_gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>jackal_navigation</run_depend>
  <run_depend>jackal_gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>	
  <run_depend>nav_msgs</run_depend>	


  <export>

  </export>
</package>
